p5/style.css
html, body {
    font-family: 'Montserrat', sans-serif;
    background-color: #e1e1e1;
    color: black;
    animation: fadeInAnimation ease 0.5s;
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
    margin: 0 0 8px 0;
    overflow-x: hidden;
}

canvas {
  display: block;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 20px 20px 40px 40px;
}

li {
  float: right;
  font-size: 20px;
  border-bottom: 2px solid #5ec4ff;
  
}

li:first-child {
  margin-left: 15px;
  width: 5rem;
}

li.second-child {
  margin-left: 15px;
  width: 3.9rem;
}

h1 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 9rem;
}

.projects {
  display: flex;
  padding-top: 15rem;
  flex-direction: column;
  margin-left: 5%;
  margin-right: 5%;
}

.proj1 {
  justify-content: space-between;
  padding-left: 0.5%;
}

.proj2 {
  flex-direction: row-reverse;
  justify-content: space-between;
  padding-right: 0.5%;
  margin-left:auto
}

.proj1, .proj2 {
  display: flex;
  height: 20rem;
  width: 80%;
  background-color: #ccc;
  font-size: 24pt;
  padding-bottom: 0.5%;
  margin-top: 6rem;
  border-radius: 10px;
}

.proj1title, .proj2title {
  font-size: 24pt;
  display: flex;
  padding: 0 1rem 0 1rem;
}

.inside-proj1 {
  display: flex;
  flex-direction: column;
  width: 75%;
}

.inside-proj2 {
  display: flex;
  flex-direction: column;
  align-items: end;
}

p.inside-proj {
  padding: 0 1rem 0 1rem;
  font-size: 18pt;
  line-height: 25pt;
  height: 9rem;
}

/* .proj1:hover, .proj2:hover {
  background-color: #a1a1a1;
} */

img.proj1img {
  border-radius: 10px;
  border: #676767;
  display: flex;
  height: 20.5rem;
}

img.proj1img:hover {
  filter: opacity(0.5);
}



h2 {
  text-decoration: underline;
  text-decoration-color: #5ec4ff;
}

h3 {
  float: left;
  font-size:x-large;
  margin-top: 15px;
  border-bottom: 2px solid #5ec4ff;
}

.navbar {
  border-style: solid;
  border-color: #B3F2F2;
  border: 15px;
}

.lan-nav {
  background-color: #425595;
  color: #e1e1e1;
  height: 100%
}

.landing {
  padding-left: 2rem;
}

.greeting {
  justify-content: flex-start;
  font-size: 46pt;
}

.description {
  letter-spacing: 0.1rem;
  line-height: 1.75rem;
  font-size: 15pt;
  border: solid 2px #5ec4ff;
  padding: 20px;
  width: 50rem;
}

a {
  color: inherit;
  text-decoration: none;
}

.project-title {
  display: flex;
  justify-content: center; 
  align-items: center;
}

h1.project-title {
  padding-right: 2rem;
}

.projectsA {
  display: grid;
  grid-template-columns: 300px 300px 300px 300px;
  top: 45%;
  left: 53%;
  
}

.projectsB {
  display: grid;
  grid-template-columns: 500px 500px 500px;
  position: absolute;
  top: 65%;
  left: 58%;
  transform: translate(-50%, -50%);
}

#wrapper {
  display: flex;
  align-content: flex-start;
	color: #ccc;
}

#hi {
	animation: pulse 7s;
  animation-iteration-count: infinite;
  font-size: 33pt;
}

@keyframes pulse {
  0% {
    color: #ccc;
  }
  16% {
    color: #425595;
  }
  33% {
    color: #ccc;
  }
  50% {
    color: #425595;
  }
  66% {
    color: #ccc;
  }
  83% {
    color: #425595;
  }
  100% {
    color: #ccc;
  }
}

#hi:after {
	content: "Designer";
	animation: spin 7s linear;
  animation-iteration-count: infinite;
}

@keyframes spin {
  0% { content:"Designer"; }
  33% { content:"Developer"; }
  66% { content: "Consulting Analyst"; }
  99% { content:"Seattlite"; }
  100% { content:"Designer"; }
}

.intro_p {
  height: 10rem;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

p {
  padding-top: 4rem;
  font-size: 12pt;
}

.button-6 {
  align-items: center;
  background-color: #dcdcdc;
  border: 1px solid #5ec4ff;
  border-radius: .25rem;
  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
  box-sizing: border-box;
  color: #5ec4ff;
  cursor: pointer;
  display: inline-flex;
  font-size: 24px;
  font-weight: 600;
  justify-content: center;
  line-height: 1.25;
  margin: 0;
  min-height: 3rem;
  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
  position: relative;
  text-decoration: none;
  transition: all 250ms;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  width: auto;
}

.button-6:hover {
  border: 2px;
  border-color: rgba(0, 0, 0, 0.15);
  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
  color: white;
  background-color: #425595;
}

.button-6:hover {
  transform: translateY(-1px);
}

/* .button-6:active {
  background-color: #F0F0F1;
  border-color: rgba(0, 0, 0, 0.15);
  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
  color: rgba(0, 0, 0, 0.65);
  transform: translateY(0);
} */





form {
  padding-left: 1rem;
  padding-bottom: 2rem;
}

button {
  height: 3rem;
  font-size: 20pt;
  background-color: #425595;
  color: #ccc;
}

p.code {
  width: 700px;
  background-color: cornsilk;
  font-size: 16px;
  flex-wrap: wrap;
  color: black;
}

textarea {
  min-width: 700px;
  min-height: 600px;
}

.row {
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  align-items: center;
  padding: 0 10% 8rem 10%;
  width: 80%;
  resize: both;
}

.footer {
  text-align: center;
}

div.contact-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

div.contact {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-bottom: 2rem;
}

div.slide {
  display: flex;
  flex-direction: column;
  align-items: center;
  color: black;
  height: 120px;
}

.hide {
  display: none;
}

img.slide:hover + .hide {
  display: flex;
}

img.slide-dark:hover + .hide {
  display: flex;
}

img.slide {
  filter: grayscale(75%);
  filter: brightness(50%);
}

img.slide-dark {
  filter: opacity(0.5);
}

img.slide-dark:hover {
  filter: opacity(1);
}
img.slide:hover {
  filter: grayscale(0);
}

